# bdm-distributed-systems

./: .gitignore
GatoMejorado/: button.py  gato_mejorado.py  label.py  p2p_node.py  screen_final.py  screen_game.py  screen_one.py  screen_three.py  screen_two.py  text_input_box.py
chat/: chat-item.qss  chat.py  chat_area.py  chat_bubble.py  chat_tcp_client.py  contacts_popover.py  emoji_popover.py  form.ui  notification_list_widget.py  notification_widget.py  pyproject.toml  ui_form.py  user_setup_dialog.py  utils.py
chat_server/: server.py
file-transfer/: filetransfer.py  form.ui  p2p_node.py  pyproject.toml  ui_form.py
pacman/: coin.py  game_logic.py  ghost_button.py  input_text.py  label.py  load_sprite.py  loading.py  p2p_helpers.py  p2p_node.py  pacman.py  pacman_button.py  pacman_p2p.py  scenes.py  settings.py
security-and-encryption/: Pipfile  app.py  form.ui  p2p_node.py  pyproject.toml  ui_form.h  ui_form.py
tcp-client/: client.py
tcp-client-server/: p2p_node.py
tcp-server/: server.py
udp-client/: client.py
udp-server/: server.py
video_stream_app/: cert.pem  form.ui  key.pem  main.py  pyproject.toml  ui_form.py
