[project]
name = "video_stream_app"
version = "0.1.0"
description = "Aplicación de streaming de video cifrado por TCP usando PySide6"
authors = [{name = "Francisc Alcala", email = "falcala@nopaltech.co.mx"}]
requires-python = ">=3.9"
dependencies = [
    "PySide6 >= 6.6.0",
    "opencv-python >= 4.8.0",
    "cryptography >= 42.0.0",
]

[tool.pyside6-project]
# Qt Creator usa esta sección para detectar el proyecto como PySide6
name = "VideoStreamApp"
main-file = "main.py"
qt-forms = ["form.ui"]
qt-resources = []
files = ["form.ui", "main.py"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
